# webgfx

./: Cargo.toml  LICENSE  README.md  README_RUST.md  index.js  package-lock.json  package.json  web.config  webpack.config.js
example/: bootstrap.js  example.js  example2.js
js/: app.js  index.js
src/: box_geometry.rs  camera.rs  lib.rs  mesh.rs  scene.rs
src/cameras/: camera.rs  mod.rs  perspective_camera.rs
src/geometry/: geometry.rs  mod.rs  utils.rs
src/js/: index.ts
src/renderers/: webgl_renderer.rs
src/rust/: lib.rs  mesh_basic_material.rs  scene.rs  vectors.rs
src/rust/cameras/: perspective_camera.rs
src/rust/geometry/: attributes.rs  geometry.rs  utils.rs
src/rust/renderers/: mod.rs  webgl_renderer.rs
static/: index.html
